src/test/deca/context/invalid/SansObjet/DeclVar-LE-string-float-int.deca
// Description:
//    Declaration of a string variable using <= operation between a float variable and int .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  0.1; 
    int y = 20; 
    string z = x <= y ; 
}
